--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                 <p>
                 &ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
                 <div class="author">
-                  <img src="images/person_1.jpg" alt="Free template by TemplateUX">
+                  <img src="images/person_1.jpg" alt="">
                   <h3>John Doe</h3>
                   <p class="position">CEO, Founder</p>
                 </div>
@@ -682,7 +682,7 @@
                 <p>
                 &ldquo;When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.&rdquo;</p>
                 <div class="author">
-                  <img src="images/person_2.jpg" alt="Free template by TemplateUX">
+                  <img src="images/person_2.jpg" alt="">
                   <h3>James Woodland</h3>
                   <p class="position">CEO, Founder</p>
                 </div>
@@ -695,7 +695,7 @@
                 <p>
                 &ldquo;A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.&rdquo;</p>
                 <div class="author">
-                  <img src="images/person_3.jpg" alt="Free template by TemplateUX">
+                  <img src="images/person_3.jpg" alt="">
                   <h3>Rob Smith</h3>
                   <p class="position">CEO, FounderCEO, Founder</p>
                 </div>
