--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
               <img src="images/i1.jpg" alt="Image">
             </figure>
             <div class="media-h-body">
-              <h2 class="mb-3"><a href="#">Education for Tomorrow's Leaders</a></h2>
+              <h2 class="mb-3"><a href="#"> Leaders</a></h2>
               <div class="meta mb-2"><span class="icon-calendar mr-2"></span><span>June 22, 2020</span>  <span class="icon-person mr-2"></span>Admin</div>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <p><a href="#">Learn More</a></p>
@@ -586,7 +586,7 @@
               <img src="images/i1.jpg" alt="Image">
             </figure>
             <div class="media-h-body">
-              <h2 class="mb-3"><a href="#">Enroll Your Kids This Summer to get 30% off</a></h2>
+              <h2 class="mb-3"><a href="#"> 30% off</a></h2>
               <div class="meta mb-2"><span class="icon-calendar mr-2"></span><span>June 22, 2020</span>  <span class="icon-person mr-2"></span>Admin</div>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <p><a href="#">Learn More</a></p>
