--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Untree.co">
+  <meta name="author" content=".co">
   <link rel="shortcut icon" href="favicon.png">
 
   <meta name="description" content="" />
@@ -66,9 +66,9 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-lg-9">
-            <a href="#" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span class="d-none d-lg-inline-block">Have a questions?</span></a> 
-            <a href="#" class="small mr-3"><span class="icon-phone mr-2"></span> <span class="d-none d-lg-inline-block">+971 4 452 6726</span></a> 
-            <a href="#" class="small mr-3"><span class="icon-envelope mr-2"></span> <span class="d-none d-lg-inline-block">info@commoditiesworldtradedmcc.ae</span></a> 
+            <a href="mailto:info@commoditiesworldtradedmcc.ae" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span class="d-none d-lg-inline-block">Have a questions?</span></a> 
+            <a href="tel: +971 4 452 6726 " class="small mr-3"><span class="icon-phone mr-2"></span> <span class="d-none d-lg-inline-block">+971 4 452 6726</span></a> 
+            <a href="mailto:info@commoditiesworldtradedmcc.ae" class="small mr-3"><span class="icon-envelope mr-2"></span> <span class="d-none d-lg-inline-block">info@commoditiesworldtradedmcc.ae</span></a> 
           </div>
 
           <!-- <div class="col-6 col-lg-3 text-right">
@@ -91,9 +91,9 @@
           <a href="index.html" class="logo menu-absolute m-0" style="font-family: Copperplate Gothic Bold;">CWTD<span class="text-primary"></span></a>
 
           <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li class=""><a href="index.html">Home</a></li>
             <li class=""><a href="about.html">About</a></li>
-            <li class=""><a href="services.html">Services</a></li>
+            <li class=""><a href="index.html#s">Services</a></li>
                 <!-- <li class="has-children">
                   <a >Services</a>
                   <ul class="dropdown">
@@ -104,7 +104,7 @@
                     <li><a href="#">Capital</a></li>
                   </ul>
                 </li> -->
-            <li class=""><a href="#p">Products</a></li>
+            <li class=""><a href="index.html#p">Products</a></li>
             <li class=""><a href="contact.html">Contact</a></li>
             
                 <!-- <li><a href="#">Menu Three</a></li> -->
@@ -117,7 +117,7 @@
             <li><a href="contact.html">Contact</a></li> -->
           </ul>
 
-          <a href="#r" class="btn-book btn btn-secondary btn-sm menu-absolute">Enroll Now</a>
+          <a href="index.html#r" class="btn-book btn btn-secondary btn-sm menu-absolute">Enroll Now</a>
 
           <a href="#" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light" data-toggle="collapse" data-target="#main-navbar">
             <span></span>
@@ -145,7 +145,7 @@
               <h1 class="mb-4 heading text-white" data-aos="fade-up" data-aos-delay="100"> Bridging Private Wealth & Digital Assets</h1>
               <h4 class="mb-4  text-white" data-aos="fade-up" data-aos-delay="100"><b>Holistic </b> Powerhouse for Investors and Wealth Advisors
                 </h4>
-              <p class="mb-0" data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-secondary">Trade With Us</a></p>
+              <p class="mb-0" data-aos="fade-up" data-aos-delay="300"><a href="#r" class="btn btn-secondary">Trade With Us</a></p>
 
             </div>
 
@@ -157,7 +157,7 @@
       </div> <!-- /.row -->
     </div> <!-- /.container -->
 
-  </div> <!-- /.untree_co-hero -->
+  </div>
 
 
   <div class="services-section">
@@ -268,7 +268,7 @@
       <div class="row justify-content-center mb-5">
         <div class="col-lg-7 text-center" data-aos="fade-up" data-aos-delay="0">
           <h2 class="line-bottom text-center mb-4">Services</h2>
-          <p>Leverages our crypto trading solutions and technology to offer bespoke services to institutions participating in the digital assets marketplace. .</p>
+          <p>Leverages our crypto trading solutions and technology to offer bespoke services to institutions participating in the digital assets marketplace.</p>
         </div>
       </div>
       <div class="row">
@@ -353,7 +353,7 @@
         </div>
       </div>
     </div>
-  </div> <!-- /.untree_co-section -->
+  </div> <!-- /-section -->
 
 
 
@@ -485,7 +485,7 @@
         </div>
       </div>
     </div>  
-  </div> <!-- /.untree_co-section -->
+  </div> <!-- /co-section -->
 
  
 
@@ -598,7 +598,7 @@
         </div>
       </div>
     </div>
-  </div> <!-- /.untree_co-section -->
+  </div> <!-- /._co-section -->
 
   <!-- <div class="untree_co-section bg-light">
     <div class="container">
@@ -711,7 +711,7 @@
         </div> -->
       </div>
     </div>
-  </div> <!-- /.untree_co-section -->
+  </div> <!--co-section -->
 
 
   <!-- <div class="untree_co-section bg-light">
@@ -866,7 +866,7 @@
         </div>
       </div>
     </div>
-  </div> <!-- /.untree_co-section -->
+  </div> <!-- _co-section -->
 
   <div class="site-footer">
 
@@ -940,13 +940,13 @@
 
       </div> <!-- /.row -->
 
-      <div class="row mt-5">
+      <!-- <div class="row mt-5">
         <div class="col-12 text-center">
           <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; CWTD <a href=></a>   <a href=""></a>
           </div>
         </div>
-      </div> <!-- /.container -->
-    </div> <!-- /.site-footer -->
+      </div> 
+    </div>  -->
 
     <div id="overlayer"></div>
     <div class="loader">
