--- a/about.html
+++ b/about.html
@@ -1,11 +1,10 @@
 
-
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Untree.co">
+  <meta name="author" content="">
   <link rel="shortcut icon" href="favicon.png">
 
   <meta name="description" content="" />
@@ -48,9 +47,9 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-lg-9">
-            <a href="#" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span class="d-none d-lg-inline-block">Have a questions?</span></a> 
-            <a href="#" class="small mr-3"><span class="icon-phone mr-2"></span> <span class="d-none d-lg-inline-block">+971 4 452 6726</span></a> 
-            <a href="#" class="small mr-3"><span class="icon-envelope mr-2"></span> <span class="d-none d-lg-inline-block">info@commoditiesworldtradedmcc.ae</span></a> 
+            <a href="mailto:info@commoditiesworldtradedmcc.ae" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> <span class="d-none d-lg-inline-block">Have a questions?</span></a> 
+            <a href="tel: +971 4 452 6726 " class="small mr-3"><span class="icon-phone mr-2"></span> <span class="d-none d-lg-inline-block">+971 4 452 6726</span></a> 
+            <a href="mailto:info@commoditiesworldtradedmcc.ae" class="small mr-3"><span class="icon-envelope mr-2"></span> <span class="d-none d-lg-inline-block">info@commoditiesworldtradedmcc.ae</span></a> 
           </div>
 
           <!-- <div class="col-6 col-lg-3 text-right">
@@ -70,13 +69,23 @@
     <div class="sticky-nav js-sticky-header">
       <div class="container position-relative">
         <div class="site-navigation text-center">
-          <a href="index.html" class="logo menu-absolute m-0">CWTD<span class="text-primary"></span></a>
+          <a href="index.html" class="logo menu-absolute m-0" style="font-family: Copperplate Gothic Bold;">CWTD<span class="text-primary"></span></a>
 
           <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
             <li class=""><a href="index.html">Home</a></li>
-            <li class="active"><a href="about.html">About</a></li>
-            <li class=""><a href="index.html">Services</a></li>
-            <li class=""><a href="index.html">Products</a></li>
+            <li class=""><a href="about.html">About</a></li>
+            <li class=""><a href="index.html#s">Services</a></li>
+                <!-- <li class="has-children">
+                  <a >Services</a>
+                  <ul class="dropdown">
+                    <li><a href="#services">B2B Payments</a></li>
+                    <hr>
+                    <li><a href="#">Wealth</a></li>
+                    <hr>
+                    <li><a href="#">Capital</a></li>
+                  </ul>
+                </li> -->
+            <li class=""><a href="index.html#p">Products</a></li>
             <li class=""><a href="contact.html">Contact</a></li>
             
                 <!-- <li><a href="#">Menu Three</a></li> -->
@@ -89,7 +98,7 @@
             <li><a href="contact.html">Contact</a></li> -->
           </ul>
 
-          <a href="#" class="btn-book btn btn-secondary btn-sm menu-absolute">Enroll Now</a>
+          <a href="index.html#r" class="btn-book btn btn-secondary btn-sm menu-absolute">Enroll Now</a>
 
           <a href="#" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light" data-toggle="collapse" data-target="#main-navbar">
             <span></span>
@@ -125,7 +134,7 @@
       </div> <!-- /.row -->
     </div> <!-- /.container -->
 
-  </div> <!-- /.untree_co-hero -->
+  </div> 
 
   <div class="untree_co-section">
     <div class="container">
@@ -168,10 +177,10 @@
         </div>
       </div>
     </div>
-  </div> <!-- /.untree_co-section -->
+  </div> <!-- section -->
 
 
-  <<div class="services-section">
+  <div class="services-section">
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-lg-4 mb-5 mb-lg-0">
@@ -333,11 +342,11 @@
           <h2 class="text-white mb-3" data-aos="fade-up" data-aos-delay="0">COMMODITIES WORLD TRADE DMCC</h2>
           <p class="text-white h5 mb-4" data-aos="fade-up" data-aos-delay="100">We offer well establish settlement services within the commodity trading industry, tailoring
             our legal and financial framework for international trader of all parts of the world. </p>
-          <p><a href="#" class="btn btn-secondary" data-aos="fade-up" data-aos-delay="200">Enroll Now</a></p>
+          <p><a href="#r" class="btn btn-secondary" data-aos="fade-up" data-aos-delay="200">Enroll Now</a></p>
         </div>
       </div>
     </div>  
-  </div> <!-- /.untree_co-section -->
+  </div> <!--co-section -->
   
 
   <div class="untree_co-section">
@@ -439,7 +448,7 @@
         </div>
       </div>
     </div>
-  </div> <!-- /.untree_co-section -->
+  </div> <!-- co-section -->
 
   <div class="site-footer">
 
@@ -450,24 +459,30 @@
         <div class="col-lg-3 mr-auto">
           <div class="widget">
             <h3>About Us<span class="text-primary">.</span> </h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <p>We offer well establish settlement services within the commodity trading industry, tailoring our legal and financial framework for international trader of all parts of the world.
+
+
+            </p>
+            
           </div> <!-- /.widget -->
+  
           <div class="widget">
-            <h3>Connect</h3>
+            <!-- <h3>Connect</h3> -->
             <ul class="list-unstyled social">
+              <!-- <img style="text-align: center;" class="img-fluid" src="images/CWT white.png" height="50%" width="100%" alt="Icon">
               <li><a href="#"><span class="icon-instagram"></span></a></li>
               <li><a href="#"><span class="icon-twitter"></span></a></li>
               <li><a href="#"><span class="icon-facebook"></span></a></li>
               <li><a href="#"><span class="icon-linkedin"></span></a></li>
               <li><a href="#"><span class="icon-pinterest"></span></a></li>
               <li><a href="#"><span class="icon-dribbble"></span></a></li>
-            </ul>
-          </div> <!-- /.widget -->
-        </div> <!-- /.col-lg-3 -->
+            </ul> -->
+          </div> 
+        </div>
 
         <div class="col-lg-2 ml-auto">
           <div class="widget">
-            <h3>Projects</h3>
+            <h3>Quick Links</h3>
             <ul class="list-unstyled float-left links">
               <li><a href="#">Home</a></li>
               <li><a href="#">About</a></li>
@@ -480,13 +495,14 @@
 
         <div class="col-lg-3">
           <div class="widget">
-            <h3>Projects</h3>
+            <h3></h3>
             <ul class="list-unstyled float-left links">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Services</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms and Conditions</a></li>
+              <img class="img-fluid" src="images/CWT white.png" alt="Icon">
+              <!-- <li><a href="#">Services</a></li>
               <li><a href="#">Products</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#">Contact</a></li> -->
             </ul>
           </div> <!-- /.widget -->
         </div> <!-- /.col-lg-3 -->
@@ -506,13 +522,13 @@
 
       </div> <!-- /.row -->
 
-      <div class="row mt-5">
+      <!-- <div class="row mt-5">
         <div class="col-12 text-center">
           <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; CWTD <a href=></a>   <a href=""></a>
           </div>
         </div>
-      </div> <!-- /.container -->
-    </div> <!-- /.site-footer -->
+      </div> 
+    </div>  -->
 
     <div id="overlayer"></div>
     <div class="loader">
