--- a/index.html
+++ b/index.html
@@ -600,6 +600,42 @@
     </div>
   </div> <!-- /._co-section -->
 
+
+
+  <div class="untree_co-hero overlay" id="r" style="background-image: url('images/stock-vector-abstract-waving-particle-technology-background-design-abstract-wave-moving-dots-flow-particles-hi-2128959116.jpg');">
+
+
+    <div class="container">
+      <div class="row align-items-center justify-content-center">
+
+        <div class="col-12">
+
+          <div class="row justify-content-center ">
+
+            <div class="col-lg-6 text-center ">
+              <a href="#" href="" data-fancybox data-aos="fade-up" data-aos-delay="0" class="caption mb-4 d-inline-block" style="font-family: Copperplate Gothic Bold;">Commodities World Trade DMCC</a>
+
+              <!-- <h1 class="mb-4 heading text-white" data-aos="fade-up" data-aos-delay="100">If you have an inquiry, you've come to the right place.</h1> -->
+              <h4 class="mb-4  text-white" data-aos="fade-up" data-aos-delay="100">If you have an inquiry, you've come to the right place.
+                </h4>
+              <p class="mb-0" data-aos="fade-up" data-aos-delay="300"><a href="mailto:info@commoditiesworldtradedmcc.ae" class="btn btn-secondary">Get Started</a></p>
+
+            </div>
+
+
+          </div>
+
+        </div>
+
+      </div> <!-- /.row -->
+    </div> <!-- /.container -->
+
+  </div>
+
+
+
+
+
   <!-- <div class="untree_co-section bg-light">
     <div class="container">
       <div class="row justify-content-center mb-5">
@@ -639,8 +675,8 @@
     </div>
   </div>  -->
 
-
-  <div class="untree_co-section" id="r">
+<!-- 
+  <div class="untree_co-section" id="r" >
     <div class="container">
       <div class="row justify-content-center mb-5">
         <div class="col-lg-7 text-center" data-aos="fade-up" data-aos-delay="0">
@@ -651,12 +687,12 @@
       </div>
       <div class="row">
         <div class="col-md-6 mb-4 mb-lg-0 col-lg-6" data-aos="fade-up" data-aos-delay="00">
-          <div class="pricing">
+          <div class="pricing"> -->
             <!-- <div class="pricing-img mb-4"><img src="images/1x/asset-1.png" alt="Image" class="img-fluid"></div> -->
-            <div class="pricing-body">
+            <!-- <div class="pricing-body"> -->
 
               <!-- <h3 class="pricing-plan-title">Individuals</h3> -->
-              <p class="mb-4"><h3 class="pricing-plan-title" style="text-align: left;">Individuals</h3>
+              <!-- <p class="mb-4"><h3 class="pricing-plan-title" style="text-align: left;">Individuals</h3>
               <div class="div-block-79 maxwidth"><ul role="list" class="list-6"><li><p class="paragraph-48" style="text-align: left;">ID&nbsp;Document</p></li>
                 <li><p class="paragraph-48" style="text-align: left;">Proof of Address</p></li><li><p class="paragraph-48" style="text-align: left;">Source of Funds</p></li>
                 <li><p class="paragraph-48" style="text-align: left;">Latest Bank&nbsp;Statements</p></li>
@@ -671,8 +707,8 @@
               <p><a href="mailto:info@commoditiesworldtradedmcc.ae?subject=Individuals%20Register?body=Please%20Fill%20This%20information%20for%20Individuals%0D%0A1.%20ID%20Document%20%0D%0A2.%20Proof%20of%20Address%20%0D%0A3.%20Source%20of%20Funds%20%0D%0A3.%20Latest%20Bank%20Statements%0D%0AArbitrage%20Clients:%0D%0AIf%20you%20are%20an%20Argentinian%20national,%20please%20take%20into%20account%20that%20as%20Proof%20of%20Funds%20you%20ll%20be%20required%20to%20attach%20the%20following:%0D%0A1.%20Source%20of%20Funds%20from%20Starting%20Capital%20(i.e:%20salary%20receipt,%20inheritance,%20sales%20receipt)%0D%0A2.%20Accounting%20Certificate%20with%20the%20corresponding%20wafer%0D%0A3.%203%20Proofs%20of%20Purchase%20and%20Sale%20that%20are%20within%20the%20latest%20certification%0D%0ANote:%20The%20latest%20tax%20return%20may%20be%20requested;%20if%20you%20have%20it,%20please%20attach%20it" class="btn btn-outline-primary">Get Started</a></p>
             </div>
           </div>
-        </div>
-        <div class="col-md-6 mb-4 mb-lg-0 col-lg-6" data-aos="fade-up" data-aos-delay="200">
+        </div> -->
+        <!-- <div class="col-md-6 mb-4 mb-lg-0 col-lg-6" data-aos="fade-up" data-aos-delay="200">
           <div class="pricing">
     
             <div class="pricing-body">
@@ -695,7 +731,7 @@
               <p><a  class="btn btn-outline-primary"  href="mailto:info@commoditiesworldtradedmcc.ae?subject=Entities%20Register?body=Please%20Fill%20This%20information%20for%20Entities%0D%0A1.%20Certificate%20of%20Incorporation%0D%0A2.%20Shareholding%20Structure%20(Identifying%20the%20UBOs%20with%20document%20number%20and%20nationalities)%0D%0A3.%20Entity%20Proof%20of%20Address%0D%0A4.%20Source%20of%20Funds%0D%0A5.Latest%20Bank%20Statements%0D%0AFrom%20the%20UBOs%0D%0A1.%20ID%20Document%0D%0A2.%20Proof%20of%20Address">Get Started</a></p>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- <div class="col-md-6 mb-4 mb-lg-0 col-lg-4" data-aos="fade-up" data-aos-delay="300">
           <div class="pricing">
            
@@ -709,9 +745,9 @@
             </div>
           </div>
         </div> -->
-      </div>
+      <!-- </div>
     </div>
-  </div> <!--co-section -->
+  </div> co-section -->
 
 
   <!-- <div class="untree_co-section bg-light">
