--- a/about.html
+++ b/about.html
@@ -130,9 +130,12 @@ url("https://db.onlinewebfonts.com/t/e3062d8da98d4c90af3ad8613ca226e7.svg#Copper
         <div class="col-12">
           <div class="row justify-content-center ">
             <div class="col-lg-6 text-center ">
-              <h1 class="mb-4 heading text-white" data-aos="fade-up" data-aos-delay="100">Private Wealth Veterans & Digital Assets Pioneers</h1>
+              <h1 class="mb-4 heading text-white" data-aos="fade-up" data-aos-delay="100">Re-shaping the financial system of Global Trade.
+              </h1>
               <div class="mb-5 text-white desc mx-auto" data-aos="fade-up" data-aos-delay="200">
-                <p>Unique Market Understanding
+                <p>
+                  Commodities World Trade DMCC
+               
                 </p>
               </div>
 
